--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BasicApp">
+        <activity android:name=".ViewOutsActivity"></activity>
+        <activity android:name=".ViewEntriesActivity" />
+        <activity android:name=".CreateEntry" />
+        <activity android:name=".CreateOut" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
